<resources>
    <string name="app_name">Signify</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome</string>
    <string name="login_to_account">Log in to your account</string>
    <string name="new_account">New to Signify? Register here</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello">Hello,</string>
    <string name="ready">ready to sign?</string>
    <string name="intro_progress">Progress: 100%</string>
    <string name="alpha_progress">Progress: 0%</string>
    <string name="start">START</string>
    <string name="cont">CONTINUE</string>
    <string name="revisit">REVISIT</string>
    <string name="locked">LOCKED</string>
    <string name="help">How to use Signify</string>
    <string name="BSL_website">Official BSL website</string>
    <string name="Logout">Logout</string>
    <string name="Survey_link">Independent learning assessment</string>
    <string name="signing_up">Signing up to Signify</string>
    <string name="enter_details">Please enter your details below</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="email">e-mail address</string>
    <string name="password">enter password</string>
    <string name="re_password">re-enter password</string>
    <string name="create_account">create account</string>
    <string name="already_account">Already have an account? Sign in here</string>
    <string name="assess_ready">Ready to learn independently?</string>
    <string name="eval">Take this quiz to check</string>
    <string name="rate">Rate each skill below from 1 to 4, based on your current skill level. Type in a number for each on the right hand side.</string>
    <string name="rating">1 = excellent; 2 = good; 3 = adequate; 4 = poor </string>
    <string name="assess1">Ability to commit to completing a task once started</string>
    <string name="assess2">Ability to self-motivate and use initiative</string>
    <string name="assess3">Ability to use feedback to better skills</string>
    <string name="assess4">Ability to revise work and identify weaker areas of knowledge</string>
    <string name="assess5">Ability to self evaluate and understand task demands</string>
    <string name="finish">Finish</string>
    <string name="title">Edit your account details</string>
    <string name="first_n">first name</string>
    <string name="last_n">last name</string>
    <string name="email_acc">e-mail address</string>
    <string name="current_password">enter current password</string>
    <string name="new_password">enter new password</string>
    <string name="re_new_password">re-enter new password</string>
    <string name="save_changes">save changes</string>
    <string name="update_password">Update your password</string>
    <string name="bsl_imagery">All content created by course.british-sign.co.uk</string>
    <string name="bsl_copyright">©british-sign.co.uk</string>
        <string name="intro_title">What is BSL?</string>
        <string name="intro_para1">You may already know something about sign language, but as with learning any new language, it can be useful to have at least a basic understanding of the history and culture that surrounds it.
            In this section there is a very brief background of sign language, please read it carefully.</string>
        <string name="intro_para2">Sign Language is a visual form of communicating using a combination of hand shapes, spatial representation, gestures, facial expression, and body language.
            Sign Language is used mainly by Deaf people and people with hearing difficulties and has been used as a method of communication among Deaf people for hundreds of years.</string>
        <string name="intro_para3"> British Sign Language, known as BSL, is the main form of sign language used within the UK and has been recognised by the UK government as a minority language since 2003.
            BSL is an independent language which is separate to spoken English, having its own grammar and syntax. It is estimated that BSL is used by around 151,000 people within the UK.</string>
        <string name="deaf_title">D/deaf People</string>
        <string name="deaf_para1">It is useful when learning BSL to understand a bit about the Deaf world.  Deaf people (with an upper-case D) are people who have had a profound hearing loss since birth and have been raised
            and identify as part of the Deaf community. Deaf people usually consider BSL to be their first language and generally socialise mainly within the Deaf community.</string>
        <string name="deaf_para2">Within the Deaf world there is a lot of pride for the language and culture and many Deaf people do not see their deafness as a disability, but as just another characteristic of who they are, just
            as they might have black hair or brown eyes. For Deaf people the word Deaf is a mark of cultural identity, much like the words English, Scottish, Welsh, Irish (etc.) rather than just a label of someone who cannot hear.</string>
        <string name="deaf_para3">A deaf person (with a lower-case d) refers to somebody who has lost their hearing after they were born and/or were brought up in the hearing community. A deaf person will typically socialise in both
            the hearing and Deaf communities.</string>
        <string name="aud_title">Audism</string>
        <string name="aud_para1">Audism is an attitude whereby people who are hearing sometimes hold a negative stigma towards those who are unable to hear - similar to sexism or racism.
            Audism assumes a limit on the abilities of what a person who is Deaf can do. Audist attitudes are most often held by those who are hearing.
            These attitudes are sometimes seen in those who are learning sign language and may think they are trying to be helpful. </string>
    <string name="aud_para2"><b>Examples of audist behaviors include:</b></string>
        <string name="aud_1">- Trying to assist with communication without being asked.</string>
        <string name="aud_2">- Asking someone to write down or lipread without them requesting this as their preferred communication method.</string>
        <string name="aud_3">- Making a phone call on behalf of someone because you assume they are unable to.</string>
        <string name="aud_para3">These are but a few examples of audist behaviours. When you are communicating with other BSL users make sure you are doing so as equals - think about how you are behaving and think carefully about whether
            your actions could be seen as audist, even though you are not intending them to be. </string>
        <string name="prim_title">Your Primary Hand</string>
        <string name="prim_para1">When you are signing, one of your hands will be more active than the other. This hand is your primary hand. Before beginning to sign it is a good idea to think about which hand this will be.</string>
        <string name="prim_para2">Initially it can be difficult to decide which hand to use, you should use whichever hand feels most comfortable. Most people will use the same hand that they write with. Once you have chosen your primary
            hand you should then stick to using that hand as your primary hand. If you keep on swapping while signing, it can get difficult for people to read you. Each time you learn a sign you must think about which hand you are using.</string>
        <string name="prim_para3"><b>Please note</b>: this version of the Signify app only shows signs from a right hand perspective.</string>
        <string name="practice">Time to Practice</string>
        <string name="introQ1">How long has sign language been used as a method of communication?</string>
            <string name="introA11">Hundreds of years</string>
            <string name="introA12">Decades</string>
            <string name="introA13">Since 1968</string>
        <string name="introQ2">When did the UK government recognise sign language as a minority language?</string>
            <string name="introA21">2001</string>
            <string name="introA22">2002</string>
            <string name="introA23">2003</string>
        <string name="introQ3">How many people are estimated to use BSL within the UK?</string>
            <string name="introA31">141,000</string>
            <string name="introA32">280,000</string>
            <string name="introA33">151,000</string>
        <string name="introQ4">What is audist behaviour?</string>
            <string name="introA41">How deaf people behave</string>
            <string name="introA42">An attitude against those unable to hear</string>
            <string name="introA43">Helping others when asked to</string>
        <string name="introQ5">Why should you not switch your primary hand when signing?</string>
            <string name="introA51">It can be difficult to understand</string>
            <string name="introA52">You will sign incorrectly</string>
            <string name="introA53">Trick question: you should do this</string>
        <string name="man_alpha_title">The Manual Alphabet</string>
        <string name="man_alpha_info1">Each letter of a manual alphabet is represented by a different hand shape or hand movement.
        Manual alphabets are used in sign language where a sign does not exist for a word, or when a signer does not know the sign for a particular word.</string>
        <string name="man_alpha_info2"> The most common use of the manual alphabet in sign language is for names of people and places that have not had a sign assigned to them.
        In BSL, the two handed manual alphabet is used. Some sign languages use a one handed alphabet (e.g. American Sign Language and Irish Sign Language).</string>
        <string name="bsl_alpha_title">The BSL Alphabet</string>
        <string name="man_alpha_info3">A quick tip before you learn the two handed alphabet; remember that the five fingers (on your secondary hand) represent the five Vowels:</string>
        <string name="bsl_alpha_info">Below is a video of the two handed manual alphabet (right handed). As with all of the signs shown, you should learn to read and sign them. Practice your signing in front of a mirror to ensure you are not making any mistakes.
        Take some time to learn the alphabet and try to get to the point where you can recite the entire alphabet without looking at this video. Please click on the video below to show the play button.</string>
        <string name="correct_sign">This sign means</string>
        <string name="true_text">true</string>
        <string name="false_text">false</string>
        <string name="correct_answer">Correct!</string>
        <string name="wrong_answer">Incorrect!</string>
        <string name="R">R</string>
        <string name="T">T</string>
        <string name="G">G</string>
        <string name="U">U</string>
        <string name="Z">Z</string>
        <string name="Q">Q</string>
        <string name="Y">Y</string>
        <string name="L">L</string>
        <string name="O">O</string>
        <string name="S">S</string>
        <string name="I">I</string>
        <string name="K">K</string>
        <string name="H">H</string>
        <string name="A">A</string>
        <string name="no_title_one">Numbers 1 to 10</string>
        <string name="ten_text">The video below shows you to sign the BSL signs for numbers 1 to 5.
            These signs are fairly easy to remember because they just involve holding up fingers on your primary hand.</string>
</resources>